fixed background flicker issue

--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -10,8 +10,8 @@
 
   width: 100%;
   height: 110rem;
-  animation: fade-in ease-out 1s;
-  animation-fill-mode: backwards;
+  /* animation: fade-in ease-out 1s;
+  animation-fill-mode: backwards; */
   padding-bottom: 5rem;
 }
 
